# avanti_plugin_old

./: .gitignore  CMakeCache.txt  LICENSE  Makefile  README.md  cmake_install.cmake
.github/: cmake.yml
.github/workflows/: cmake.yml  compile_and_test.yml  main.yml
SDK/Libraries/Mac/XPWidgets.framework/: XPWidgets
XPlane-Plugin-Template-master/.github/workflows/: cmake.yml
myMakeFiles/: Makefile  Makefile_mac  Makefile_win
src/: CMakeCache.txt  CMakeLists.txt  Makefile  avanti.cpp  cmake_install.cmake  units_conv.cpp  units_conv.h
src/SDK/Libraries/Mac/XPLM.framework/: XPLM
src/avanti/lin_x64/: avanti.xpl
